<resources>
    <string name="app_name">Horoscope</string>
    <string name="day_yesterday">Yesterday</string>
    <string name="day_today">Today</string>
    <string name="day_tomorrow">Tomorrow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_example">Its finally time for you to think about just one thing: what makes you happy. Fortunately, that happens to be a person who feels the same way. Give yourself the evening off. Refuse to be put in charge of anything.</string>

    <string name="current_date">Current Date</string>
    <string name="compatibility">Compatibility</string>
    <string name="lucky_number">Lucky Number</string>
    <string name="lucky_time">Lucky Time</string>
    <string name="color">Color</string>
    <string name="date_range">Date Range</string>
    <string name="mood">Mood</string>
    <string name="description">Description</string>
</resources>